不要になったファイルを削除"

--- a/tts_ios.html
+++ b/tts_ios.html
@@ -76,7 +76,7 @@
         </style>
         <script type="text/javascript" src="js2/jquery-3.3.1.js"></script>
         <script type="text/javascript" src="js/sora.js"></script>
-        <script type="text/javascript" src="js2/common2.js?v=1"></script>
+        <script type="text/javascript" src="js2/common.js?v=1"></script>
         <script type="text/javascript" src="js2/tts_ios.js?v=1"></script>
     </head>
     <body>
