--- a/index.html
+++ b/index.html
@@ -3,44 +3,69 @@
     <head>
         <meta charset="utf-8">
         <style type="text/css">
-            .tab {
-                margin-left: 40px;
+            span {
+                font-size: 14px;
+
+            }
+            input[type=text] {
+                width: 200px;
+                height: 20px;
+                margin-bottom: 5px;
+                font-size: 16px;
+            }
+            input[type=checkbox] {
+                margin-top: 5px;
+                margin-left: 5px;
+                width: 20px;
+                height: 20px;
+            }
+            input[type=button] {
+                width: 200px;
+                height: 30px;
+                margin-top: 5px;
+                padding: 0px;
+                font-size: 14px;
+            }
+            .leftArea {
+                float: left;
+                margin: 5px;
+                padding: 5px;
+                width: 400px;
+                border: 1px solid #fcc;
+            }
+            .rightArea {
+                float: left;
+                margin: 5px;
+                padding: 5px;
+                width: 400px;
+                border: 1px solid #ccf;
             }
         </style>
+        <script type="text/javascript" src="js2/jquery-3.3.1.js"></script>
+        <script type="text/javascript">
+            $(function() {
+                $('#btnOpeLogin').on('click', function() {
+                    const opeid = $('#txtOpeId').val();
+                    let url = 'tts_ope.html?opeid=' + opeid;
+                    window.open(url, '_blank');
+                });
+                $('#btnIosLogin').on('click', function() {
+                    const custom = $('#chkCustom:checked').val();
+                    let url = 'tts_ios.html?custom=' + ((custom) ? true : false);
+                    window.open(url, '_blank');
+                });
+            })
+        </script>
     </head>
     <body>
-        <a href="tts_ios.html" target="_blank">TTSテスト(iOS)</a><br/>
-        <a href="tts_ope1.html?operatorId=1" target="_blank">TTSテスト(オペ)</a><br/>
-        <a href="tts_ope1.html?operatorId=1&fname=soap&ext=mp3" target="_blank">TTSテスト(オペ) - 音源ファイルパラメータ付</a>
-        <br/>
-        <h3>手順</h3>
-        <div style="margin-left: 10px;">
-            <span>1. iOS画面を開き「接続」する。（スマホなどで表示すればベター）</span><br/>
-            <span>2. オペ画面を開き「接続」する。</span><br/>
-            <span>3. ドライバ音声とTTSの音量は、双方のオーディオコントロールで調整。</span><br/>
-            <span>4. 次に再生するファイルを指定する場合は「次の音源を設定」にファイル名を入力して「設定」する。</span><br/>
-            <span>5. 再生中に保留にしたい場合は「保留」する。</span><br/>
-            <br/>
-            <span>※ iOS画面とオペ画面を同じ端末で開く場合、オペの立場でしか使用できない。iOS画面の音声をブラウザタブでミュートする）</span><br/>
-            <span>※ 1.2.の操作順はどちらが先でも問題ない。</span>
+        <div class="leftArea">
+            <span>オペレータID　:　</span>
+            <input id="txtOpeId" type="text" value="DEV_TEST1"/><br/>
+            <input id="btnOpeLogin" type="button" value="オペレータにログイン"/>
         </div>
-        <br/>
-        <h3>処理内容</h3>
-        <div style="margin-left: 10px;">
-            <span>1. iOS画面；「接続」</span><br/>
-            <span class="tab">MultiStreamのPublisherとしてSoraに接続する。</span><br/>
-            <span class="tab">&nbsp;（自端末のマイクを入力としたStreamを生成する。）</span><br/>
-            <span class="tab">&nbsp;（Publisherの出力Streamに設定される。）</span><br/>
-            <span class="tab">オペ画面でTTSストリームが接続されると、追加でStreamを生成する。</span><br/>
-            <span class="tab">&nbsp;（TTSストリームはPublisherの出力として流入してくる。）</span><br/>
-            <br/>
-            <span>2. オペ画面；「接続」</span><br/>
-            <span class="tab">ServerのTTS音源ソースとの間にStreamを確立する。</span><br/>
-            <span class="tab">MultiStreamのPublisherとしてSoraに接続し、TTS音源をPublisherへ転送する。</span><br/>
-            <span class="tab">&nbsp;（このStreamは、自端末では再生されない。）</span><br/>
-            <span class="tab">MultiStreamのSubscriberとしてSoraに接続し、チャネルに設定されている全てのStreamを再生する。</span><br/>
-            <span class="tab">&nbsp;（自端末で出力したTTS音源Streamが流入する。）</span><br/>
-            <span class="tab">&nbsp;（iPhone側で接続済みであれば、iPhoneマイクからの音声Streamが流入する。）</span><br/>
+        <div class="rightArea">
+            <span>AutoGainControlを使用しない　：</span><input id="chkCustom" type="checkbox" /><br/>
+            <input id="btnIosLogin" type="button" value="iOSにログイン"/>
         </div>
     </body>
 </html>
