サーバ上のリソースでリフレッシュ

--- a/html/prod/tcd_listen.html
+++ b/html/prod/tcd_listen.html
@@ -20,9 +20,11 @@
                 <input id="btnPendingOff" type="button" value="保留解除" />
                 <br/>
                 <div id="volArea">
-                    <span id="lblVol">TTS音量バランス：</span>
+                    <span id="lblVol">TTS音量：</span>
                     <input type="text" id="txtVolume" value="20" /><span id="lblMax">/100</span>
                     <input id="btnVolumeSet" type="button" value="設定" />
+                </div>
+                <div style="margin-left: 10px; font-style: italic; color: #aaa;">上記は「本来のTTSの音量の何パーセントを出力するか」という意味です。
                 </div>
             </div>
             <div id="rightArea">
