保留音を保留音４で固定

--- a/html/stage/tcd_listen.html
+++ b/html/stage/tcd_listen.html
@@ -34,17 +34,17 @@
         <hr/>
         <div>
             <h3>保留音設定</h3>
-            <div id="waitSound"></div>
-            <select id="selectWaitSound">
+            <div id="waitSound">保留音「保留音４」固定。</div>
+            <select id="selectWaitSound" disabled>
                 <option value="">ー</option>
                 <option value="1">保留音１</option>
                 <option value="2">保留音２</option>
                 <option value="3">保留音３</option>
-                <option value="4">保留音４</option>
+                <option value="4" selected>保留音４</option>
                 <option value="5">保留音５</option>
                 <option value="6">保留音６</option>
             </select>
-            <input id="btnWaitSound" type="button" value="保留音選択" />
+            <input id="btnWaitSound" type="button" value="保留音選択" disabled/>
         </div>
     </body>
 </html>
